--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,14 +5,11 @@
         <span>:: <a href="https://www.linkedin.com/in/bsahin0">LinkedIn</a></span>
     </div>
   <div class="footer__inner">
-    {{ if $.Site.Copyright }}
-      <div class="copyright copyright--user">
-        <span>{{ $.Site.Copyright | safeHTML }}</span>
-    {{ else }}
       <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="http://gohugo.io">Hugo</a></span>
-    {{ end }}
-        <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
+        <span>🄯 {{ now.Year }}</span> 
+        <span>:: <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>&nbsp;</span> 
+        <span>:: Powered by <a href="http://gohugo.io">Hugo</a>&nbsp;</span> 
+        <span>:: Themed with <a href="https://github.com/panr/hugo-theme-terminal">Terminal</a></span>
       </div>
   </div>
 </footer>
