--- a/layouts/partials/katex.html
+++ b/layouts/partials/katex.html
@@ -16,6 +16,7 @@
                 { left: "\\(", right: "\\)", display: false },
                 { left: "\\begin{equation}", right: "\\end{equation}", display: true },
                 { left: "\\begin{equation*}", right: "\\end{equation*}", display: true },
+                { left: "\\begin{align*}", right: "\\end{align*}", display: true},
                 { left: "\\begin{align}", right: "\\end{align}", display: true },
                 { left: "\\begin{alignat}", right: "\\end{alignat}", display: true },
                 { left: "\\begin{gather}", right: "\\end{gather}", display: true },
